Add mulit instance
Change-Id: I021e0642d6ad20ce7bd1b24bc96ed6c1fe74cce6

--- a/app/locale/zh_cn.json
+++ b/app/locale/zh_cn.json
@@ -20,5 +20,45 @@
   "more": "更多",
   "Username and password are not match!": "用户名和密码不匹配!",
   "Failed to submit user data!": "提交数据失败!",
-  "Server error!": "服务器端出现故障，请重试!"
+  "Server error!": "服务器端出现故障，请重试!",
+  "Cancel": "取消",
+  "Instances": "云主机",
+  "Imported": "导入",
+  "Soft-deleted": "回收站",
+  "Name": "名称",
+  "FixedIP": "私有IP",
+  "FloatingIP": "浮动IP",
+  "Host": "主机",
+  "Project": "项目",
+  "User": "用户",
+  "Status": "状态",
+  "Overview": "概览",
+  "Log": "日志",
+  "Console": "控制台",
+  "Monitor": "监控",
+  "VNC Console": "控制台",
+  "Delete": "删除",
+  "More Action": "更多操作",
+  "Refresh": "刷新",
+  "Recover": "恢复",
+  "ACTIVE": "正常",
+  "SHUTOFF": "关闭",
+  "ERROR": "错误",
+  "BUILD": "创建",
+  "Reboot": "重启",
+  "Power On": "开机",
+  "Power Off": "关机",
+  "Suspend": "休眠",
+  "Wakeup": "唤醒",
+  "Snapshot": "快照",
+  "Resize": "调整规格",
+  "Migrate": "迁移",
+  "Attach IP": "绑定IP",
+  "Untach IP": "释放IP",
+  "Attach Volume": "挂载云硬盘",
+  "Untach Volume": "卸载云硬盘",
+  "Edit": "编辑",
+  "Actions": "操作",
+  "Detail Info": "详情",
+  "Flavor Info": "配额信息"
 }
